gaps fixed

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -78,6 +78,8 @@ text-transform: capitalize;
 .ant-select-outlined:not(.ant-select-customize-input) .ant-select-selector {
   border: 0px !important;
   background-color: transparent !important;
+  outline: none!important;
+  box-shadow: none!important;
 }
 .ant-col-12{
   display: flex;
@@ -119,43 +121,45 @@ line-height: 1.25rem; /* 142.857% */
 
 /* Customize the color of the checkbox */
 .ant-checkbox-checked .ant-checkbox-inner {
-  background-color: green;
-  border-color: green;
+  background-color: #83B183;
+  border-color: #83B183;
 }
 .ant-checkbox-input .ant-checkbox-input:hover{
-  border: green !important;
+  border: #83B183 !important;
   background-color: #1A4721 !important;
 }
 .ant-checkbox-checked:hover .ant-checkbox-inner {
-  background-color: green;
-  border-color: green;
+  background-color: #83B183;
+  border-color: #83B183;
 }
-
+.ant-checkbox .ant-checkbox-inner{
+  border-radius: 2px !important;
+}
 /* Customize the color of the checkmark */
 .ant-checkbox-checked .ant-checkbox-inner::after {
   border-color: white;
 }
 .ant-checkbox-wrapper:not(.ant-checkbox-wrapper-disabled):hover .ant-checkbox-checked:not(.ant-checkbox-disabled) .ant-checkbox-inner {
-  background-color: green !important;
+  background-color: #83B183 !important;
   border-color: transparent;
 }
 /* Customize the hover color of the checkbox */
 .ant-checkbox-wrapper:hover .ant-checkbox-inner, 
 .ant-checkbox:hover .ant-checkbox-inner, 
 .ant-checkbox-input:focus + .ant-checkbox-inner {
-  border-color: green;
+  border-color: #83B183;
 }
 .ant-checkbox-input:hover{
-  border-color: green!important;
-  background-color: green!important;
+  border-color: #83B183!important;
+  background-color: #83B183!important;
 }
 .ant-checkbox-inner:hover{
-  border-color: green!important;
-  background-color: green!important;
+  border-color: #83B183!important;
+  background-color: #83B183!important;
 }
 .ant-checkbox:hover .ant-wave-target:hover  .ant-checkbox-checked:hover{
-  border-color: green!important;
-  background-color: green!important;
+  border-color: #83B183!important;
+  background-color: #83B183!important;
 }
 /* Customize the focus color of the checkbox */
 .ant-checkbox-input:focus + .ant-checkbox-inner {
@@ -167,12 +171,12 @@ line-height: 1.25rem; /* 142.857% */
 box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.12);
 }
 .ant-checkbox .ant-wave-target{
-  border-color: green!important;
-  background-color: green!important;
+  border-color: #83B183!important;
+  background-color: #83B183!important;
 }
-.ant-checkbox .ant-wave-target span{
-  border-color: green!important;
-  background-color: green!important;
+.checkbox span{
+  border-color: #83B183!important;
+
 }
 .left-section{
   width: 45%;
